// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pagination component should match snapshot with blank data 1`] = `
<styled.section>
  <Styled(styled.div)
    disabled={true}
    onClick={[Function]}
  >
    <Icon
      color={null}
      cursor={false}
      fixCrossAxisAlign={null}
      height={null}
      type="BoldDoubleArrow"
      width={null}
    />
  </Styled(styled.div)>
  <Styled(Styled(styled.div))
    disabled={false}
    onClick={[Function]}
  >
    <Icon
      color={null}
      cursor={false}
      fixCrossAxisAlign={null}
      height={null}
      type="BoldArrow"
      width={null}
    />
  </Styled(Styled(styled.div))>
  <styled.div
    active={false}
    key="10"
    onClick={[Function]}
  >
    10
  </styled.div>
  <styled.div
    active={false}
    key="11"
    onClick={[Function]}
  >
    11
  </styled.div>
  <styled.div
    active={false}
    key="12"
    onClick={[Function]}
  >
    12
  </styled.div>
  <styled.div
    active={false}
    key="13"
    onClick={[Function]}
  >
    13
  </styled.div>
  <styled.div
    active={false}
    key="14"
    onClick={[Function]}
  >
    14
  </styled.div>
  <styled.div
    active={false}
    key="15"
    onClick={[Function]}
  >
    15
  </styled.div>
  <Styled(Styled(styled.div))
    disabled={false}
    onClick={[Function]}
  >
    <Icon
      color={null}
      cursor={false}
      fixCrossAxisAlign={null}
      height={null}
      type="BoldArrow"
      width={null}
    />
  </Styled(Styled(styled.div))>
  <Styled(styled.div)
    disabled={false}
    onClick={[Function]}
  >
    <Icon
      color={null}
      cursor={false}
      fixCrossAxisAlign={null}
      height={null}
      type="BoldDoubleArrow"
      width={null}
    />
  </Styled(styled.div)>
</styled.section>
`;

exports[`Pagination component should match snapshot with full props 1`] = `
<styled.section>
  <Styled(styled.div)
    disabled={false}
    onClick={[Function]}
  >
    <Icon
      color={null}
      cursor={false}
      fixCrossAxisAlign={null}
      height={null}
      type="BoldDoubleArrow"
      width={null}
    />
  </Styled(styled.div)>
  <Styled(Styled(styled.div))
    disabled={false}
    onClick={[Function]}
  >
    <Icon
      color={null}
      cursor={false}
      fixCrossAxisAlign={null}
      height={null}
      type="BoldArrow"
      width={null}
    />
  </Styled(Styled(styled.div))>
  <styled.div
    active={false}
    key="10"
    onClick={[Function]}
  >
    10
  </styled.div>
  <styled.div
    active={false}
    key="11"
    onClick={[Function]}
  >
    11
  </styled.div>
  <styled.div
    active={false}
    key="12"
    onClick={[Function]}
  >
    12
  </styled.div>
  <styled.div
    active={false}
    key="13"
    onClick={[Function]}
  >
    13
  </styled.div>
  <styled.div
    active={false}
    key="14"
    onClick={[Function]}
  >
    14
  </styled.div>
  <styled.div
    active={false}
    key="15"
    onClick={[Function]}
  >
    15
  </styled.div>
  <Styled(Styled(styled.div))
    disabled={false}
    onClick={[Function]}
  >
    <Icon
      color={null}
      cursor={false}
      fixCrossAxisAlign={null}
      height={null}
      type="BoldArrow"
      width={null}
    />
  </Styled(Styled(styled.div))>
  <Styled(styled.div)
    disabled={false}
    onClick={[Function]}
  >
    <Icon
      color={null}
      cursor={false}
      fixCrossAxisAlign={null}
      height={null}
      type="BoldDoubleArrow"
      width={null}
    />
  </Styled(styled.div)>
</styled.section>
`;

exports[`Pagination component should match snapshot without pagination 1`] = `""`;
